--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     <h2>Contact Info</h2>
 
     <ul>
-        <li>Email: <a href="mailto: dimi1nakos@gmail.com">dimi1nakos@gmail.com</a></li>
-        <li>Github: <a href="https://github.com/diminako">Dimitri Nakos' Github</a></li>
-        <li>Portfolio: <a href="">Coming Soon!!</a></li>
+        <li><strong>Email:</strong> <a href="mailto: dimi1nakos@gmail.com">dimi1nakos@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="https://github.com/diminako">Dimitri Nakos' Github</a></li>
+        <li><strong>Portfolio:</strong> <a href="">Coming Soon!!</a></li>
     </ul>
 
 
